# postgresql-cdc-2

./: Cargo.toml  connector-curl.txt  docker-compose.yml  queries.sql  register-connector.json
custom-smt/: settings.gradle
custom-smt/app/: build.gradle
custom-smt/app/src/main/java/custom/smt/: PostgresWalSmt.java
src/: events.rs  main.rs  models.rs
