[package]
name = "postgresql-cdc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "tls-rustls",
    "uuid",
    "json",
    "macros",
    "runtime-tokio",
] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
